--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
       <a href= "https://www.olympics.com/en/news/all-you-need-to-know-about-race-walking"> More resources </a>
       
-        <img src="https://media.aws.iaaf.org/media/Original/48acabb9-3a04-4de2-9aa3-ce78d59e9174.jpg?v=106492316">
+        <img src="https://media.aws.iaaf.org/media/Original/48acabb9-3a04-4de2-9aa3-ce78d59e9174.jpg?v=106492316" width="50" height="40" >
 
       <h5> Players  </h5>
         <ul>
