--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </nav>
     <main>
       <!-- Main content sections go here --> 
-       <section class="section1">
+       <section>
        <h3> History of speeding walking</h3> 
        <p> History Timeline</p>
 
