--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </nav>
     <main>
       <!-- Main content sections go here --> 
-       <section> 
+       <div class="section1">
        <h3> History of speeding walking</h3> 
        <p> History Timeline</p>
 
@@ -33,7 +33,7 @@
       </ul>
          <p> The future of this sport is predicted to be very differrent to the sport right now.There is significant changes being made like for example changing the distances that players run and Implementing technology in judging.</p>
        
-      
+       </div>
          <h2> About: </h2>
 
       <p> This website unfolds the sport of speed walking at every level.Speed walk may be considered as a less important sport but there is a lot more to it than people think. </p>
