--- a/index.html
+++ b/index.html
@@ -17,23 +17,15 @@
        <div class="section-1">
        <h3> History of speeding walking</h3> 
        <p> History Timeline</p>
-
-      <ul> 
+         <ul> 
         <li>Past</li>
+        <li>The Victorian Era marked the beginning of speeding walking getting recognized as a past time/sport. </li>
+        <li>Present</li>
+        <li> The sport of speed walking is recognized in many competitions such as the olympic, It might not be a well known sport but it is included in many national and international competitions.</li>
+        <li> Future</li>
+        <li> The future of this sport is predicted to be very differrent to the sport right now.There is significant changes being made like for example changing the distances that players run and Implementing technology in judging.</li>
       </ul>
-        <p> The Victorian Era marked the beginning of speeding walking getting recognized as a past time/sport.</p> 
-
-      <ul> 
-        <li> Present </li>
-      </ul> 
-         <p> The sport of speed walking is recognized in many competitions such as the olympic, It might not be a well known sport but it is included in many national and international competitions.</p>
-
-      <ul>
-        <li> Future </li>
-      </ul>
-         <p> The future of this sport is predicted to be very differrent to the sport right now.There is significant changes being made like for example changing the distances that players run and Implementing technology in judging.</p>
-       
-       </div>
+      </div>
          <h2> About: </h2>
 
       <p> This website unfolds the sport of speed walking at every level.Speed walk may be considered as a less important sport but there is a lot more to it than people think. </p>
