--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </nav>
     <main>
       <!-- Main content sections go here --> 
-       <div class="section-1">
+       <div class="sectionA">
        <h3> History of speeding walking</h3> 
        <p> History Timeline</p>
          <ul> 
@@ -27,7 +27,7 @@
       </ul>
       </div>
 
-      <div class="section-2">
+      <div class="sectionB">
          <h2> About: </h2>
 
       <p> This website unfolds the sport of speed walking at every level.Speed walk may be considered as a less important sport but there is a lot more to it than people think. </p>
@@ -43,7 +43,7 @@
       </div>
         
       
-      <div class="section-3">
+      <div class="sectionC">
       <h3> Players  </h3>
         <ul>
           <li> <b>Robyn stevens  </b></li>
