--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     </nav>
     <main>
       <!-- Main content sections go here --> 
+      <div id
        <div class="sectionA">
        <h3> History of speeding walking</h3> 
        <p> History Timeline</p>
