--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </nav>
     <main>
       <!-- Main content sections go here --> 
-      <div id
+      <div id="color">
        <div class="sectionA">
        <h3> History of speeding walking</h3> 
        <p> History Timeline</p>
@@ -94,7 +94,7 @@
             <li> Push off of your toes.</li>
             <li> Swing your arms in a pendulum motion, bent at the elbows at a 90-degree angle. </li>
              </ul> 
-      
+      </div>
       </div>
     </main>
     <footer>
