--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <div class="sectionD">
         <h3> Rules</h3> 
         <ol>
-            <li><b>One foot must always be in contact with the ground</b></li>
+            <li><b>One foot must always be in contact with the ground.</b></li>
             <li><b>The advancing leg must be straight from the point of contact until the body passes over it. </b></li>
             <li><b>Judges cannot use technology like binoculars or mirrors.</b></li>
             
@@ -82,7 +82,7 @@
         <p> Maintaining your leg straight for this sport can lead to injuries, These injuries consist of shin splints, hamstring, knee pain etc.</p>
         <h4> Injured Athlete</h4>
       <ul> 
-        <li> Jared Tallent's hamstring injury caused him to miss out on the 2020 tokyo olympics</li>
+        <li> Jared Tallent's hamstring injury caused him to miss out on the 2020 tokyo olympics.</li>
       </ul>
       </div>
       <div class="sectionF">
